# project_1

./: .gitignore  CMakeLists.txt  Gitfiletrial_1.cpp  README.md  aboutme.cpp  build.bat  build_and_run.bat  main.cpp  main.hpp
